header and home page stuff

--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,14 +1,21 @@
 ul.menu {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
 	margin: 0;
 	padding: 0;
 	li {
-		display: inline;
-		margin-right: 10px;
+		text-decoration: none;
+		list-style: none;
+		font-size: 1.8rem;
+		display: flex;
+		flex-direction: row;
+		text-transform: uppercase;
+		padding-right: 10px;
 		a {
-			color: #333;
 			padding: 10px;
-			background: #333;
-			color: white;
 		}
 	}
 }
+
+
